Total mined overlap fix

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -64,6 +64,7 @@ p {
     font-size: 10px;
     top: -10px;
     right: 0;
+    white-space: nowrap;
   }
 }
 
